# WaterLandLevelsGenerator

./: CMakeLists.txt  GenerateLevels.sln
Debug/: GenerateLevels.ilk
GenerateLevels/: CMakeLists.txt  EnumBitOperations.h  Game.cpp  Game.h  GameCell.cpp  GameCell.h  GameField.cpp  GameField.h  GenerateLevels.cpp  GenerateLevels.vcxproj  GenerateLevels.vcxproj.filters  GreedyPlayer.cpp  GreedyPlayer.h  GreedyPlayer2.cpp  GreedyPlayer2.h  IPlayer.h  InteractivePlayer.cpp  InteractivePlayer.h  Level.h  MCTSNode.cpp  MCTSNode.h  MCTSPlayer.cpp  MCTSPlayer.h  MCTSTree.cpp  MCTSTree.h  MiniMaxModifiedPlayer.cpp  MiniMaxModifiedPlayer.h  MiniMaxPlayer.cpp  MiniMaxPlayer.h  Raiting.cpp  Raiting.h  RandomPlayer.cpp  RandomPlayer.h  Statistic.cpp  Statistic.h  Step.cpp  Step.h  ThreadPool.h  Vector2.h
GenerateLevels/Debug/: GenerateLevels.exe.recipe  vc142.idb
GenerateLevels/Debug/GenerateLevels.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GenerateLevels.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GenerateLevels/x64/Debug/: GenerateLevels.exe.recipe  vc142.idb
GenerateLevels/x64/Debug/GenerateLevels.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GenerateLevels.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GenerateLevels/x64/Release/: GenerateLevels.exe.recipe  GenerateLevels.iobj  GenerateLevels.ipdb
GenerateLevels/x64/Release/GenerateLevels.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GenerateLevels.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GenerateLevelsMac/GenerateLevels/GenerateLevels.xcodeproj/: project.pbxproj
GenerateLevelsMac/GenerateLevels/GenerateLevels.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GenerateLevelsMac/GenerateLevels/GenerateLevels.xcodeproj/project.xcworkspace/xcuserdata/nprotasov.xcuserdatad/: UserInterfaceState.xcuserstate
GenerateLevelsMac/GenerateLevels/GenerateLevels.xcodeproj/xcuserdata/nprotasov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
GenerateLevelsMac/GenerateLevels/GenerateLevels.xcodeproj/xcuserdata/nprotasov.xcuserdatad/xcschemes/: xcschememanagement.plist
GenerateLevelsMac/GenerateLevelsMac.xcodeproj/: project.pbxproj
GenerateLevelsMac/GenerateLevelsMac.xcodeproj/project.xcworkspace/xcuserdata/nprotasov.xcuserdatad/: UserInterfaceState.xcuserstate
GenerateLevelsMac/GenerateLevelsMac.xcodeproj/xcuserdata/nprotasov.xcuserdatad/xcschemes/: xcschememanagement.plist
x64/Debug/: GenerateLevels.ilk
